--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
     ports:
       - 9092:9092
+    depends_on:
+      - zookeeper
   zookeeper:
     image: confluentinc/cp-zookeeper
     environment:
